--- a/css/home.css
+++ b/css/home.css
@@ -16,6 +16,10 @@ body {
     display: none;
 }
 
+.close {
+    display: none;
+}
+
 .container {
     width: 1440px;
     margin: 0 auto;
@@ -431,9 +435,7 @@ hr {
         margin-left: 2.3%;
     }
 
-    .sub_text {
-        margin-left: 2%;
-    }
+
 
     .img_food {
         display: grid;
@@ -469,7 +471,7 @@ hr {
     }
 }
 
-@media only screen and (max-width:660px) {
+@media only screen and (max-width:600px) {
     .container {
         max-width: 100%;
         margin: 0 auto;
@@ -485,6 +487,7 @@ hr {
         margin-top: 0;
         z-index: 10;
         transition: 0.5s;
+
     }
 
     .header.active1 {
@@ -495,48 +498,57 @@ hr {
     }
 
     .header_right {
+        position: absolute;
+        top: 0;
         width: 100%;
-        height: 0;
-        background-color: #e1e0e0;
-        z-index: 10;
-
-        display: none;
-    }
-
-    .header_right.active {
         height: 200vh;
         background-color: #e1e0e0;
         z-index: 10;
+        transition: 1s;
+        transform: translateY(-100%);
+    }
+
+
+    .header_right.active {
+        width: 100%;
+        height: 200vh;
+        background-color: #e1e0e0;
+        z-index: 10;
+        position: relative;
+        top: 0;
+        transform: translateY(0%);
+    }
+
+    .menu {
+
+        height: 0;
+        width: 100%;
+    }
+
+    .menu ul {
+
         display: flex;
-        animation: identifier forwards 0.5s;
-
-
-    }
-
-    @keyframes identifier {
-        0% {
-            height: 0;
-        }
-
-        100% {
-            height: 200vh;
-        }
-    }
-
-    @keyframes identifier1 {
-        0% {
-            height: 200vh;
-        }
-
-        100% {
-            height: 0vh;
-        }
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 300px;
+        background-color: #e1e0e0;
     }
 
     .open {
         position: absolute;
         left: 5%;
+        display: block;
         cursor: pointer;
+        transition: 0.1s;
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .open.active {
+        opacity: 0;
+        visibility: hidden;
     }
 
     .open span {
@@ -549,10 +561,26 @@ hr {
 
     .close {
         position: absolute;
+        top: 49%;
         left: 5%;
         cursor: pointer;
         width: 20px;
         height: 20px;
+        opacity: 0;
+        visibility: hidden;
+        transition: 0.5s;
+        z-index: 10;
+    }
+
+    .close.active {
+        position: absolute;
+        left: 5%;
+        cursor: pointer;
+        width: 20px;
+        height: 20px;
+        opacity: 1;
+        z-index: 100;
+        visibility: visible
     }
 
     .close span:nth-child(1) {
@@ -562,7 +590,7 @@ hr {
         width: 20px;
         background-color: #000000;
         margin-top: 5px;
-
+        z-index: 10;
         rotate: 310deg;
     }
 
@@ -573,34 +601,13 @@ hr {
         width: 20px;
         background-color: #000000;
         margin-top: 5px;
-        z-index: 100;
+        z-index: 10;
         rotate: 50deg;
-    }
-
-    .menu {
-
-        margin-top: 50%;
-        margin-left: 37%;
-    }
-
-    .menu ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        height: 20vh;
-    }
-
-    .menu li {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
 
     .header_left {
         position: absolute;
-        left: 38%;
+        left: 34%;
     }
 
     .header_sign {
@@ -609,31 +616,58 @@ hr {
         left: 65%;
     }
 
+    .signIn {
+        width: 100%;
+    }
+
+    .signUp {
+        margin-left: 20%;
+        width: 100%;
+    }
+
     .signIn button {
-        width: 70px;
-        height: 40px;
-        border-radius: 5px;
+        width: 140%;
+        height: 30px;
         border: 1px solid #f54747b3;
         background-color: white;
         border-radius: 5px;
         color: #F54748;
         cursor: pointer;
         transition: 0.5s;
+        margin: 0;
     }
 
     .sub_banner_img img {
-        margin-top: 50%;
+        margin-top: 20%;
         max-width: 100%;
         max-height: 100%;
     }
 
     .signUp button {
-        width: 70px;
-        height: 40px;
+        width: 145%;
+        height: 30px;
         border-radius: 5px;
         border: 1px solid #F54748;
         background-color: #F54748;
         color: white;
         cursor: pointer;
+    }
+
+    .btn-cate button {
+        width: 100%;
+    }
+
+    .sub_content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .sub_text {
+        width: 100%;
+    }
+
+    .h2-cate h2 {
+        font-size: 15px;
     }
 }
