--- a/css/home.css
+++ b/css/home.css
@@ -560,6 +560,7 @@ hr {
     }
 
     .close {
+        display: block;
         position: absolute;
         top: 49%;
         left: 5%;
@@ -669,5 +670,30 @@ hr {
 
     .h2-cate h2 {
         font-size: 15px;
+    }
+
+    .fooster_home {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .fooster_right {
+        width: 100%;
+    }
+
+    .fooster_right ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 5px 0;
+    }
+
+    .fooster_right ul li {
+        text-align: center;
+    }
+
+    .fooster_right ul li a {
+        padding: 0;
+        font-size: 14px;
     }
 }
